fixed linting errors

--- a/source/scss/_variables.scss
+++ b/source/scss/_variables.scss
@@ -1,6 +1,6 @@
 $primary-color: #333;
 $btn-background-color: #ccf;
-$font-family: 'Courier New', Courier, monospace;
+$font-family: 'Courier New', courier, monospace;
 $base-font-size: 12px;
 $base-border-radius: 3px;
 $cursor-style: pointer;
