--- a/source/scss/style.scss
+++ b/source/scss/style.scss
@@ -3,7 +3,7 @@
 body {
   margin: 0;
   background-color: $primary-color;
-  color: lighten($primary-color, 80%)
+  color: lighten($primary-color, 80%);
 }
 
 table.menu {
@@ -18,20 +18,25 @@ table.menu {
   background-color: lighten($primary-color, 30%);
   box-shadow: darken($primary-color, 30%) 0 0 15px;
   font-family: $font-family;
+
   h1 {
     margin: 0 10px;
-    font-size: $base-font-size * 1.7
+    font-size: $base-font-size * 1.7;
   }
+
   td {
-    text-align: center
+    text-align: center;
   }
+
   td.label {
     width: 80px;
-    text-align: right
+    text-align: right;
   }
+
   td.result {
-    text-align: right
+    text-align: right;
   }
+
   button {
     width: 80%;
     background-color: $btn-background-color;
@@ -43,14 +48,17 @@ table.menu {
     border: 1px solid lighten($primary-color, 10%);
     transition: width 0.5s, background-color 0.5s;
     border-radius: $base-border-radius;
+
     &:hover {
       cursor: $cursor-style;
       background-color: lighten($btn-background-color, 3%);
       width: 85%;
-      transition: width 0.5s, background-color 0.5s
+      transition: width 0.5s, background-color 0.5s;
     }
-    &:active, &:focus {
-      outline: none
+
+    &:active,
+    &:focus {
+      outline: none;
     }
   }
 }
@@ -61,7 +69,8 @@ table.menu {
   background-color: darken($btn-background-color, 6%);
   border: 1px solid lighten($primary-color, 10%);
   box-shadow: darken($primary-color, 30%) 0 0 15px;
+
   &:hover {
-    cursor: $cursor-style
+    cursor: $cursor-style;
   }
 }
